Unit-test newly added input validation

--- a/supplementary/reports/jacocoHTML/comp3111.popnames/BabyNameRecommendation.java.html
+++ b/supplementary/reports/jacocoHTML/comp3111.popnames/BabyNameRecommendation.java.html
@@ -2,42 +2,88 @@
 
 import com.sun.javafx.binding.StringFormatter;
 
+/**
+ * Task 4 (Application 1) Class that generate recommendations for names of newborn babies
+ */
 public class BabyNameRecommendation {
+    /**
+     * year of birth of Dad of the baby
+     */
     private final int dadYOB;
+    /**
+     * year of birth of Mum of the baby
+     */
     private final int mumYOB;
+    /**
+     * name of Dad of the baby
+     */
     private final String dadName;
+    /**
+     * name of Mum of the baby
+     */
     private final String mumName;
+    /**
+     * a random year chosen by user for baby name recommendation
+     */
     private final int vintageYear;
 
-<span class="fc" id="L12">    BabyNameRecommendation(int dadYOB, int mumYOB, String dadName, String mumName, int vintageYear){</span>
-<span class="fc" id="L13">        this.dadYOB = dadYOB;</span>
-<span class="fc" id="L14">        this.mumYOB = mumYOB;</span>
-<span class="fc" id="L15">        this.dadName = dadName;</span>
-<span class="fc" id="L16">        this.mumName = mumName;</span>
-<span class="fc" id="L17">        this.vintageYear = vintageYear;</span>
-<span class="fc" id="L18">    }</span>
+    /**
+     * Construct an BabyNameRecommendation object for querying recommendations for names of newborn babies
+     * @param dadYOB    year of birth of Dad of the baby
+     * @param mumYOB    year of birth of Mum of the baby
+     * @param dadName   name of Dad of the baby
+     * @param mumName   name of Mum of the baby
+     * @param vintageYear   a random year chosen by user for baby name recommendation
+     */
+<span class="fc" id="L38">    BabyNameRecommendation(int dadYOB, int mumYOB, String dadName, String mumName, int vintageYear){</span>
+<span class="fc" id="L39">        this.dadYOB = dadYOB;</span>
+<span class="fc" id="L40">        this.mumYOB = mumYOB;</span>
+<span class="fc" id="L41">        this.dadName = dadName;</span>
+<span class="fc" id="L42">        this.mumName = mumName;</span>
+<span class="fc" id="L43">        this.vintageYear = vintageYear;</span>
+<span class="fc" id="L44">    }</span>
 
     /**
-     * getBabiesNames()
-     * First get rank of the father's and mother's name at their YOB
-     * Get a boy's name and a girl's name with the same rank as dadRank and mumRank in vintageYear
-     * @return string with recommendation for boy's name and girl's name
+     *Get the recommended names for a boy and a girl.
+     *
+     * &lt;p&gt;
+     * &lt;Strong&gt;Algorithm:&lt;/Strong&gt;
+     * &lt;br&gt;
+     * The algorithm returns 2 recommended names for the user, 1 for a boy, 1 for a girl based on the
+     * the ranks of the names of the parents in their respective birth years. Then the algorithm will
+     * choose 2 names with the same rank as the names of the parents and return the recommendated names.
+     * If the rank of the parents' names are too low or out of bound, the algorithm will return the lowest
+     * ranked names in the vintage year
+     * &lt;/p&gt;
+     *
+     * &lt;p&gt;
+     * &lt;strong&gt;Justification:&lt;/strong&gt;
+     * The original NK-T4 algorithm of Universal compatibility will first compute the ranks of the parents,
+     * which is the rank of the parents' names' in their respective year of birth.
+     * Then it will compute a name for the boy and a name for the girl which has the same rank as their parents'
+     * names' ranks in their respective year of birth.
+     * &lt;br&gt;
+     * However, the given algorithm will be unable to provide a recommendation when the ranks of the parents'
+     * names are too low, or when the vintage year does not have a name at that rank.
+     * &lt;br&gt;
+     * Therefore, we modified the algorithm to make it return the name with the lowest rank in that year,
+     * if there are multiple names with the same rank, it will return the first name in that rank.
+     * &lt;/p&gt;
+     * @return recommendation for baby names
      */
     public String getBabiesNames() {
-<span class="fc" id="L27">        int dadRank = AnalyzeNames.getRankEnhanced(dadYOB, dadName, &quot;M&quot;);</span>
-<span class="fc" id="L28">        System.out.println(dadRank);</span>
-<span class="fc" id="L29">        int mumRank = AnalyzeNames.getRankEnhanced(mumYOB, mumName, &quot;F&quot;);</span>
-<span class="fc" id="L30">        System.out.println(mumRank);</span>
-<span class="fc" id="L31">        String boyName = AnalyzeNames.getNameEnhanced(vintageYear, dadRank, &quot;M&quot;);</span>
-<span class="fc" id="L32">        String girlName = AnalyzeNames.getNameEnhanced(vintageYear, mumRank, &quot;F&quot;);</span>
-<span class="fc bfc" id="L33" title="All 2 branches covered.">        if (boyName == &quot;information on the name at the specified rank is not available&quot;) {</span>
-<span class="fc" id="L34">            boyName = AnalyzeNames.getLowestName(vintageYear, &quot;M&quot;);</span>
+<span class="fc" id="L75">        int dadRank = AnalyzeNames.getRankEnhanced(dadYOB, dadName, &quot;M&quot;);</span>
+<span class="fc" id="L76">        int mumRank = AnalyzeNames.getRankEnhanced(mumYOB, mumName, &quot;F&quot;);</span>
+<span class="fc" id="L77">        String boyName = AnalyzeNames.getNameEnhanced(vintageYear, dadRank, &quot;M&quot;);</span>
+<span class="fc" id="L78">        String girlName = AnalyzeNames.getNameEnhanced(vintageYear, mumRank, &quot;F&quot;);</span>
+<span class="fc bfc" id="L79" title="All 2 branches covered.">        if (boyName.equals(&quot;information on the name at the specified rank is not available&quot;)) {</span>
+<span class="fc" id="L80">            boyName = AnalyzeNames.getLowestName(vintageYear, &quot;M&quot;);</span>
         }
-<span class="fc bfc" id="L36" title="All 2 branches covered.">        if (girlName == &quot;information on the name at the specified rank is not available&quot;) {</span>
-<span class="fc" id="L37">            girlName = AnalyzeNames.getLowestName(vintageYear, &quot;F&quot;);</span>
+<span class="fc bfc" id="L82" title="All 2 branches covered.">        if (girlName.equals(&quot;information on the name at the specified rank is not available&quot;)) {</span>
+<span class="fc" id="L83">            girlName = AnalyzeNames.getLowestName(vintageYear, &quot;F&quot;);</span>
         }
-<span class="fc" id="L39">        String result = String.format(&quot;Recommendation for a boy's name: %s \nRecommendation for a girl's name: %s&quot;, boyName, girlName);</span>
-<span class="fc" id="L40">        return result;</span>
+<span class="fc" id="L85">        String result = String.format(&quot;Recommendation for a boy's name: %s \nRecommendation for a girl's name: %s&quot;, boyName, girlName);</span>
+<span class="fc" id="L86">        return result;</span>
     }
 
 }
